--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <meta charset="utf-8">
   <title>TodoList</title>
   <link rel="stylesheet" type="text/css" href="style.css">
+  <script src="https://code.jquery.com/jquery-2.2.3.min.js"
+  integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo=" crossorigin="anonymous"></script>
+
 </head>
 <body>
   <div class="container">
